# fastapi-docker

./: README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  config.py  main.py
