[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Mastermind-U"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-pytest = "^1.3"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
